--- a/package.json
+++ b/package.json
@@ -23,9 +23,11 @@
     "pg": "^6.1.2",
     "pg-hstore": "^2.3.2",
     "react": "^16.2.0",
+    "babel-preset-es2015": "^6.24.1",
     "react-dom": "^16.2.0",
     "react-router-dom": "^4.0.0",
     "redux": "^3.7.2",
+    "webpack": "^2.2.1",
     "sequelize": "^4.4.0"
   },
   "devDependencies": {
